<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@color/colorAccent"
        android:contentDescription="@string/cd" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_alignTop="@id/background"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/cdforlogo"
        android:visibility="visible"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:visibility="visible"
        android:layout_marginRight="72dp" />

    <TextView
        android:id="@+id/appnametextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/background"
        android:layout_marginTop="471dp"
        android:gravity="center|center_horizontal"
        android:text="@string/coffee_shop"
        android:textSize="36sp"
        android:textStyle="bold" />

</RelativeLayout>