<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/finalcartcardlayout"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/carditemimage"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/carditemimage"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/carditemname"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/carditemimage"
        android:layout_toRightOf="@id/carditemimage"
        android:gravity="start"
        android:text="@string/carditemname"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/setquantity"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carditemname"
        android:layout_alignStart="@+id/carditemname"
        android:layout_alignLeft="@+id/carditemname"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_1"
        android:inputType="number"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/itemprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carditemname"
        android:layout_alignStart="@+id/carditemname"
        android:layout_alignLeft="@+id/carditemname"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="20dp" />


</RelativeLayout>